setup.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops
# ---
# kind: StorageClass
# apiVersion: storage.k8s.io/v1
# metadata:
#   name: standard
#   namespace: devops
# provisioner: kubernetes.io/azure-disk
# parameters:
#   storageaccounttype: Standard_LRS
#   kind: Shared
