jenkins.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: devops
  labels:
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 50000
      targetPort: 50000
      protocol: TCP
      name: jnlp-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: pv-claim
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources:
            limits:
              cpu: "1"
              memory: 1024M
            requests:
              cpu: "0.5"
              memory: 256M  
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 50000
            name: jnlp-port
            protocol: TCP
          volumeMounts:
            - name: jenkins-home
              mountPath: "/var/jenkins_home"
            - name: docker-sock-volume
              mountPath: /var/run/docker.sock
          # securityContext:
          #   privileged: true
          # readinessProbe:
          #     tcpSocket:
          #       port: 8080
          #     initialDelaySeconds: 30
          #     timeoutSeconds: 10
          #     failureThreshold: 10
          # livenessProbe:
          #     tcpSocket:
          #       port: 8080
          #     initialDelaySeconds: 30
          #     timeoutSeconds: 10
          #     failureThreshold: 10
